--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
+    win10: only for win10 OS
+    beta_users
+
+
